# energymix_web

./: .gitignore  config.toml  index.css  index.html  main.css  robots.txt  search_index.en.js  sitemap.xml  updater.sh
.github/workflows/: deploy.yml  publish.yml
content/: _index.md  faq.md
energysim-wasm/: Cargo.toml  deploy.sh
energysim-wasm/src/: lib.rs  sim.rs  storico.rs  yearly_time_series.rs
energysim-wasm/src/dati/: potenza_installata.csv  produzione.csv
faq/: index.html
pkg/: energysim_wasm.js  energysim_wasm_bg.wasm
sass/: index.scss  main.scss
templates/: base.html  index.html
